Sheet AI(취업할수있겠조)/final-project-backend/src/main/java/com/example/finalproject/exception/error/AIServerUnavailableException.java
package com.example.finalproject.exception.error;

public class AIServerUnavailableException extends RuntimeException {
    public AIServerUnavailableException(String message) {
        super(message);
    }
}
